EZ-1586 migrate feedback comment editor, teacher student view editor and testing tab editor

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1154,7 +1154,7 @@ ez-code-edit-tabs {
 }
 
 .CodeMirror-scroll {
-    min-height: 20vh;
+    min-height: min(20vh, 10rem);
     max-height: 80vh;
 }
 
