--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1463,6 +1463,10 @@ md-circular-progress::part(.progress.indeterminate) {
     margin: 0;
 }
 
+md-filled-button.danger {
+    --md-filled-button-container-color: var(--md-sys-color-error);
+}
+
 
 
 .btn, .btn-flat, .btn-floating {
