wui exercise text quote also to md primary color

--- a/wui/static/css/exercise.css
+++ b/wui/static/css/exercise.css
@@ -111,7 +111,7 @@
 }
 
 .exercise-text blockquote {
-    border-left: 5px solid var(--ez-green);
+    border-left: 5px solid var(--md-sys-color-primary);
 }
 
 
