EZ-1486 allow testing checkbox and persist view

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1884,7 +1884,7 @@ ez-checkbox {
 }
 
 ez-checkbox > label {
-    font-size: .8em;
+    font-size: 1.4rem;
 }
 
 [type="checkbox"] + span:not(.lever) {
